--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,17 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+MAILPIT_HOST=127.0.0.1
+MAILPIT_SMTP_PORT=1025
+MAILPIT_HTTP_URL=http://127.0.0.1:8025
+MAILPIT_WEBHOOK_URL=http://127.0.0.1:8000/mailpit/webhook
+MAILPIT_WEBHOOK_TOKEN=
+
+MAILBOX_STORAGE_DISK=local
+MAILBOX_RETENTION_DAYS=7
+MAILBOX_WEBHOOK_SIGNATURE_KEY=
+MAILBOX_QUEUE=default
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
