--- a/.env.example
+++ b/.env.example
@@ -47,14 +47,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
+# Set MAIL_MAILER to 'smtp' for local development with Mailpit.
+# Set MAIL_MAILER to 'postmark' for production.
+MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+POSTMARK_TOKEN=
 
 MAILPIT_HOST=127.0.0.1
 MAILPIT_SMTP_PORT=1025
